test/MapperTestLibrary1/Error/ErrorCollectionInstanceMap.cs
// <Auto-Generated/>

#if !NO_BUILD_ERROR_CODE

using System.Collections.Generic;
using LightweightObjectMapper;

namespace MapperTestLibrary;

internal class ErrorCollectionInstanceMapClass1
{
}

internal class ErrorCollectionInstanceMapClass2
{
}

file class Extensions
{
    public Extensions()
    {
        IEnumerable<ErrorCollectionInstanceMapClass2> list = new List<ErrorCollectionInstanceMapClass2>();
        new List<ErrorCollectionInstanceMapClass1>().MapTo(list);
    }
}

#endif
